# heist

./: .gitignore  LICENSE  Makefile  README.md  validation.md
cli/: Cargo.toml  README.md  validation.md
cli/src/: cli.rs  exitcode.rs  git_repository.rs  lib.rs  main.rs  models.rs  resume.rs  state.rs  state_repository.rs  validation.rs  worktree.rs
cli/src/adapters/: file_heist_dir_repository.rs  file_score_repository.rs  file_state_repository.rs  filesystem_worktree.rs  mod.rs  real_git.rs  real_tool_probe.rs  system_clock.rs  testing.rs  validation_fs.rs
cli/src/app/: base.rs  begin.rs  doctor.rs  list.rs  mod.rs  resume.rs  review.rs  score.rs  state.rs  sync.rs  validation.rs  worktree.rs
cli/src/cli/: exit_code.rs  mod.rs  present.rs
cli/src/domain/: error.rs  language.rs  mod.rs  review.rs  score.rs  state.rs  testing.rs  tool.rs  validation.rs  value.rs  worktree.rs
cli/src/ports/: clock.rs  git.rs  heist_dir_repository.rs  mod.rs  score_repository.rs  state_repository.rs  tool_probe.rs  validation_source.rs  worktree_fs.rs
cli/src/utils/: mod.rs
cli/tests/: resume.rs  state_get.rs  state_init.rs  state_schema.rs  state_set.rs  validation_check.rs  validation_resolve.rs  worktree_add.rs  worktree_remove.rs
cli/tests/e2e/: begin.rs  doctor.rs  list.rs  main.rs  resume.rs  review_select.rs  state_get.rs  state_incr.rs  state_init.rs  state_schema.rs  state_set.rs  validation_check.rs  validation_resolve.rs  worktree_add.rs  worktree_cleanup.rs  worktree_remove.rs
cli/tests/integration/: common.rs  file_heist_dir_repository_tests.rs  main.rs  (+3 more)
(+44 files in other folders)
