[package]
name = "heist-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heist-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
