[package]
name = "heist-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "heist_cli"
path = "src/lib.rs"

[[bin]]
name = "heist-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.21"
nutype = { version = "0.7.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
